<resources>
    <string name="app_name">Online Coffee</string>
    <string name="start_ordering">START ORDERING</string>
    <string name="cup_a_coffee">Cup-A-Coffee</string>
    <string name="about_us">About Us</string>
    <string name="description">Cup-A-Coffee Shop and Gallery offers a unique coffee house environment unlike any other in macon.We are not only a place to drop in and get your morning cup of coffee (although you are more than welcome to do that) ,We are a place where you can sit down and enjoy that tailor-made cup of coffee.If you need to work ,We have a seating area created specifically for ypu . If you need to rest , we have a comfortable seating area right in front of the library.
.Once again Welcome to Cup-A-Coffee, where your daily caffeine fix meets the convenience of modern technology. Our coffee shop app is your gateway to a world of rich, aromatic brews and delectable treats. </string>
    <string name="order">Order</string>
    <string name="select_a_coffee">Select a Coffee</string>
    <string name="americano">Americano</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="latte">Latte</string>
    <string name="macchiato">Macchiato</string>
    <string name="select_a_size">Select a size</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="options">Options</string>
    <string name="_2_shots">2 Shots</string>
    <string name="sugar">Sugar</string>
    <string name="cream">Cream</string>
    <string name="whole_milk">Whole Milk</string>
    <string name="_2_milk">2% Milk</string>
    <string name="not_fat_milk">Not Fat Milk</string>
    <string name="almond_milk">Almond Milk</string>
    <string name="continue1">Continue</string>
    <string name="pay">Pay</string>
    <string name="enter_pickup_info">Enter Pickup Info</string>
    <string name="full_name">Full Name</string>
    <string name="john_doe">john_doe</string>
    <string name="phone_number">Phone Number</string>
    <string name="_444_444_444">_444_444_444</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="welcome">Welcome</string>
    <string name="a_with">"A %1$s %2$s, with "</string>
    <string name="comma">,</string>
    <string name="and">"and "</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="enter_payment_info">Enter Payment Info</string>
    <string name="card_type">Card Type</string>
    <string name="card_number">Card Number</string>
    <string name="_1234123412341234">1234123412341234</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="mm_yyyy">MM/YYYY</string>
    <string name="stars">***</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="orderinfo">orderInfo</string>
    <string name="paymentinfo">paymentInfo</string>
    <string name="summary">Summary</string>
    <string name="cup_a_coffee2">Cup A Coffee</string>
    <string name="order_summary">Order Summary</string>


    <string-array name="CardType">
        <item>_</item>
        <item>Visa</item>
        <item>MasterCard</item>
    </string-array>
</resources>