<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_light">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_payment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/brown_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/order"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_payment"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/select_a_coffee"
                    android:textColor="@color/brown_dark"
                    android:textSize="35sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <RadioGroup
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_select">

                    <RadioButton
                        android:id="@+id/americano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_radio_button"
                        android:button="@color/brown_dark"
                        android:paddingStart="40dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="40dp"
                        android:paddingBottom="10dp"
                        android:text="@string/americano"
                        android:textColor="@drawable/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/cappuccino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_radio_button"
                        android:button="@color/brown_dark"
                        android:paddingStart="40dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="40dp"
                        android:paddingBottom="10dp"
                        android:text="@string/cappuccino"
                        android:textColor="@drawable/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/latte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_radio_button"
                        android:button="@color/brown_dark"
                        android:paddingStart="40dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="40dp"
                        android:paddingBottom="10dp"
                        android:text="@string/latte"
                        android:textColor="@drawable/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/macchiato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_radio_button"
                        android:button="@color/brown_dark"
                        android:paddingStart="40dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="40dp"
                        android:paddingBottom="10dp"
                        android:text="@string/macchiato"
                        android:textColor="@drawable/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RadioGroup>

                <Button
                    android:id="@+id/continue_btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/continue1"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radio1" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/coffee_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/select_a_size"
                    android:textColor="@color/brown_dark"
                    android:textSize="35sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioGroup
                    android:id="@+id/radio_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/size">

                    <RadioButton
                        android:id="@+id/small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/small"
                        android:textColor="@color/brown_dark"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Medium"
                        android:textColor="@color/brown_dark"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/large"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/large"
                        android:textColor="@color/brown_dark"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </RadioGroup>

                <Button
                    android:id="@+id/continue_btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/custom_button"
                    android:text="Continue"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radio_size" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/options"
                    android:textColor="@color/brown_dark"
                    android:textSize="35sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/options_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_option">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_shots"
                        android:textColor="@color/brown_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/sugar"
                        android:textColor="@color/brown_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/cream"
                        android:textColor="@color/brown_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/whole_milk"
                        android:textColor="@color/brown_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/_2_milk"
                        android:textColor="@color/brown_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/not_fat_milk"
                        android:textColor="@color/brown_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/almond_milk"
                        android:textColor="@color/brown_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/continue_btn3"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_margin="15dp"
                android:background="@drawable/custom_button"
                android:text="@string/continue1"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkbox" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>